trying to fix spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .navigation{
     background: rgb(253, 237, 226);
-    height:10vh;
+    height:12vh;
     
 }
 
@@ -20,7 +20,7 @@ nav li{
 #logo{
     margin: 1%;
     font-size: 24px;
-    margin-right: 26%;
+    margin-right: 28%;
     margin-left: 30px;
 }
 
